name:                   beta
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.6
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Math
synopsis:               Beta functions
description:            Beta functions

source-repository head
  type: git
  location: git://github.com/mokus0/beta.git

Library
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:      Math.Beta
                        Math.Beta.Incomplete
  build-depends:        base >= 3 && < 5,
                        continued-fractions,
                        converge,
                        gamma,
                        quadrature,
                        vector
